<?xml version="1.0"?>
<package format="2">
	<name>kacanopen</name>
	<version>0.1.0</version>
	<description>KaCanOpen: An Open Plug&amp;Play CANopen Stack for ROS in Modern C++</description>
	<maintainer email="thomas.keh@student.kit.edu">Thomas Keh</maintainer>
	<author email="thomas.keh@student.kit.edu">Thomas Keh</author>
	<license>BSD</license>
	<url type="website">https://github.com/KITmedical/kacanopen</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>  
  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>diagnostic_updater</depend>
  
	<!-- <build_depend>message_generation</build_depend> -->

</package>
